--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -22,7 +22,7 @@
   @mixin atMedium {
     position: fixed;
     color: rgba($mainBack, .6);
-    z-index: 15;
+    z-index: 4;
 
     &--dark {
       color: rgba(23, 51, 72, .85);
@@ -43,15 +43,17 @@
     opacity: 0;
     text-align: center;
     font-size: 1.3rem;
-
+    z-index: 4;
     transition: all .20s ease-out;
 
     .site-header--dark & {
       opacity: 1;
     }
 
-    @mixin atMedium {
+    @mixin atSmall {
       font-size: 1.5rem;
+      opacity: 1;
+      visibility: visible;
   }
 }
 
@@ -59,7 +61,7 @@
     position: fixed;
     top: 8%;
     left: -1rem;
-    z-index: 15;
+    z-index: 4;
 
 
     @mixin atMedium {
